--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -1,6 +1,7 @@
 <h1>This is the thanks page</h1>
 <h2>Thank you for signing!</h2>
 
-{{#rows}}
+
+
+<p>{{signature}}</p>
 <a href="/signers">See all {{count}} signers</a>
-{{/rows}}
