--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -2,6 +2,7 @@
 <h2>Thank you for signing!</h2>
 
 
+<img src="{{signature}}" alt="signature">
 
-<p>{{signature}}</p>
+
 <a href="/signers">See all {{count}} signers</a>
