--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -2,12 +2,10 @@
 
         <h2>Please sign our petition</h2>
         <form method='POST' style="display: flex; flex-direction: column; justify-content: space-between; width: 80%; height: 50%;">
-            </span><input type='text' name='first' placeholder='Firstname' autocomplete='off'>
-            <input type='text' name='last' placeholder='Lastname' autocomplete='off'>
-                <input type="text"  placeholder="signature" name="signature">
-                {{!-- <input type="hidden"  name="signature"> --}} 
-                <canvas id="canvas" width="600" height="100" name="signature"></canvas>
-                   {{!-- put this input field in every single form and DO NOT modify this code --}}
+            <input type="hidden"  name="signature" id="sig-id">
+            <p>Please sign here</p>
+            <canvas id="canvas" width="600" height="100" name="signature"></canvas>
+                  
                  <input type="hidden" name="_csrf" value="{{csrfToken}}">
             <button type="submit">submit</button>
         </form>
@@ -17,13 +15,3 @@
             <script src="/canvas.js"></script>
 
        
-
-        {{!-- {{#projectsData}}
-            <div class="project-box">
-                {{#if ../image}}<div class="">
-                 <a href='/projects/{{dirName}}'><img class="project-screenshot" src="/{{dirName}}/screenshot.png"></a>
-                 <div class="box-links"><a href="/projects/{{dirName}}" class="homepage-links">{{projName}}</a></div></div>
-                {{else}}<div class="title-links"><a href="/projects/{{dirName}}"class="menu-links">{{projName}}</a></div>{{/if}}
-            </div>
-            
-{{/projectsData}} --}}
