--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -1,8 +1,9 @@
-<h1>This is the thanks page</h1>
+
 <h2>Thank you for signing!</h2>
+<p>Let's all fight together to make a better world with cheese!</p>
 
 
-<img src="{{signature}}" alt="signature">
+<img src="{{sigImg}}" alt="signature">
 
 
 <a href="/signers">See all {{count}} signers</a>
