--- a/views/partials/form.handlebars
+++ b/views/partials/form.handlebars
@@ -2,16 +2,16 @@
 
  
  
-        <form method='POST' style="display: flex; flex-direction: column; justify-content: center; space-between; width: 80%; height: 50%;">
+       
                 {{#if signup}}
                 <input type='text' name='first' placeholder='First Name' autocomplete='off'>
                 <input type='text' name='last' placeholder='Last Name' autocomplete='off'>
                 {{/if}}
-                <input type='email' name='email' placeholder='E Mail' autocomplete='off'>
+                <input type='email' name='email' placeholder='Email' autocomplete='off'>
                 <input type='password' name='pass' placeholder='Password' autocomplete='off'>
                 <input type="hidden" name="_csrf" value="{{csrfToken}}">
-                <button>{{#if signup}}Sign Up{{else}}login{{/if}}</button>
-        </form>
+                <button class="sign-log-btn">{{#if signup}}Sign Up{{else}}Log in{{/if}}</button>
+   
              
                 
                    {{!-- put this input field in every single form and DO NOT modify this code --}}
