--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -1,16 +1,30 @@
-<h1>This is petition page</h1>
 
-        <h2>Please sign our petition</h2>
-        <form method='POST' style="display: flex; flex-direction: column; justify-content: space-between; width: 80%; height: 50%;">
-            <input type="hidden"  name="signature" id="sig-id">
-            <p>Please sign here</p>
-            <canvas id="canvas" width="600" height="100" name="signature"></canvas>
+    
+
+        <div class="box-image-petition">
+            <img src="/images/saycheese.jpg" alt="neon say cheese" class="img-say-cheese">
+        </div>
+
+        <div class="explanation-petition-box">
+            <h2>Sign our petition to make the refusal of eating cheese a criminal act!</h2>
+            <p class="petition-description">Cheese is probably the best thing invented by humans, and people refusing to eat it should be imprisoned!</p>
+        </div>
+
+            <form method='POST' class="form-petition-box">
+                <input type="hidden"  name="signature" id="sig-id">
+                <p class="sign-here">Please sign here</p>
+                <canvas id="canvas" width="400" height="100" name="signature"></canvas>
                   
-                 <input type="hidden" name="_csrf" value="{{csrfToken}}">
-            <button type="submit">submit</button>
-        </form>
+                <input type="hidden" name="_csrf" value="{{csrfToken}}">
+                <button type="submit" class="btn-petition">submit</button>
+            </form>
+        
+        <div class="error-msg-box-form-sig">
+            <p class="error-msg-form-sig">{{errorMessage}}</p>
+        </div>
+            
 
-            <p>{{errorMessage}}</p>
+          
 
             <script src="/canvas.js"></script>
 
