--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -1,9 +1,19 @@
 
-<h2>Thank you for signing!</h2>
-<p>Let's all fight together to make a better world with cheese!</p>
 
 
-<img src="{{sigImg}}" alt="signature">
+<div class="box-image-petition">
+    <img src="/images/saycheese.jpg" alt="neon say cheese" class="img-say-cheese">
+</div>
 
+<div class="thank-you-box">
+    <h2>Thank you for signing!</h2>
+    <p>Let's all fight together to make a better world with cheese!</p>
+</div>
 
-<a href="/signers">See all {{count}} signers</a>
+<div class="signature-box">
+    <img src="{{sigImg}}" alt="signature" class="signature-img">
+</div>
+
+<div class="link-signers-box">
+    <a href="/signers" class="link-signers">See all {{count}} signers</a>
+</div>
