--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -8,7 +8,7 @@
     <h2 class="login-title">{{title}}</h2>
 
     <form method='POST' class="form-login-box">
-        {{>form}}
+        {{>form login=true}}
     </form>
 
     <div class="link-reg-box">
