--- a/views/registration.handlebars
+++ b/views/registration.handlebars
@@ -8,7 +8,7 @@
     </div>
     
     <form method='POST' class="form-reg-box">   
-        {{>form signup=true}}
+        {{>form signup=true login=true}}
     </form>
 
       <div class="link-login-box">
