--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -10,7 +10,7 @@
 
 <div class="list-signers-box">
     {{#rows}}
-    <p class="list-signers"><a href="{{url}}">{{first}} {{last}}</a> {{age}} <a href="/signers/:{{city}}">{{city}}</a></p>
+    <p class="list-signers"><a href="{{url}}" class="link-signers">{{first}} {{last}}</a> {{age}} <a class="link-signers" href="/signers/{{city}}">{{city}}</a></p>
     {{/rows}}
 
 </div>
