--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -17,3 +17,5 @@
 <div class="link-signers-box">
     <a href="/signers" class="link-signers">See all {{count}} signers</a>
 </div>
+
+<button type="submit" class="delete-btn">Delete</button>
