--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -4,11 +4,7 @@
             </div>
 
             <form method='POST' class="form-profile-box">
-                <input type="number"  name="age" placeholder="Age">
-                <input type="text"  name="city" placeholder="City">
-                <input type="url"  name="url" placeholder="https://example.com">   
-                <input type="hidden" name="_csrf" value="{{csrfToken}}">
-                <button type="submit" class="btn-profile">Submit</button>
+             {{>form profile=true}}
             </form>
 
             <p>{{errorMessage}}</p>
