--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,7 +1,7 @@
 
 <h2>Edit Profile Page</h2>
 
-<form method='POST' class="form-edit-box"></form>
+<form method='POST' class="form-edit-box">
  {{>form edit=true}}
  </form>
 
