--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -1,16 +1,20 @@
 
+<section class="signers-page">
 
   <div class="box-image-petition">
         <img src="/images/saycheese.jpg" alt="neon say cheese" class="img-say-cheese">
     </div>
 
-<div class="title-signers-box">
-    <h3>We the undersigned demand that refusing eating cheese becomes a criminal act! </h3>
-</div>
+    <h3 class="title-signers-box">We the undersigned demand that refusing eating cheese becomes a criminal act! </h3>
+
 
 <div class="list-signers-box">
     {{#rows}}
-    <p class="list-signers"><a href="{{url}}" class="link-signers">{{first}} {{last}}</a> {{age}} <a class="link-signers" href="/signers/{{city}}">{{city}}</a></p>
+    <div class="signers-row-box">
+        <p class="list-signers"><a href="{{url}}" class="link-signers">{{first}} {{last}}</a> {{age}} <a class="link-signers" href="/signers/{{city}}">{{city}}</a></p>
+    </div>
     {{/rows}}
 
 </div>
+
+</section>
