--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -1,13 +1,11 @@
-{{!-- 
- <h1>{{title}}</h1> --}}
+<section class="city-page">
  
-  <div class="box-image-petition">
-        <img src="/images/saycheese.jpg" alt="neon say cheese" class="img-say-cheese">
-    </div>
+    <img src="/images/saycheese.jpg" alt="neon say cheese" class="img-say-cheese">
+    
 
-<div class="title-signers-box">
+{{!-- <div class="title-signers-box"> --}}
     <h3>We the undersigned demand that refusing eating cheese becomes a criminal act! </h3>
-</div>
+{{!-- </div> --}}
 
 <div class="list-signers-box">
     {{#rows}}
@@ -15,3 +13,5 @@
     {{/rows}}
 
 </div>
+
+</section>
