--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -1,10 +1,11 @@
+<section class="edit-page">
 
-<h2>Edit Profile Page</h2>
+    <h1>{{title}}</h1>
 
-<form method='POST' class="form-edit-box">
- {{>form edit=true}}
- </form>
+    <form method='POST' class="form-edit-box">
+        {{>form edit=true}}
+    </form>
 
- <p class="error-msg-edit">{{errorMessage}}</p>
+    <p class="error-msg-edit">{{errorMessage}}</p>
 
- 
+ </section>
