--- a/views/petition.handlebars
+++ b/views/petition.handlebars
@@ -1,14 +1,12 @@
 
-    
+    <section class="petition-page">
 
-        <div class="box-image-petition">
+       
             <img src="/images/saycheese.jpg" alt="neon say cheese" class="img-say-cheese">
-        </div>
-
-        <div class="explanation-petition-box">
-            <h2>Sign our petition to make the refusal of eating cheese a criminal act!</h2>
-            <p class="petition-description">Cheese is probably the best thing invented by humans, and people refusing to eat it should be imprisoned!</p>
-        </div>
+        
+            <h2 class="petition-description">Sign our petition to make the refusal of eating cheese a criminal act!</h2>
+            <p class="petition-description">Refusing to eat it is just insane!</p>
+      
 
             <form method='POST' class="form-petition-box">
                 <input type="hidden"  name="signature" id="sig-id">
@@ -19,12 +17,12 @@
                 <button type="submit" class="btn-petition">submit</button>
             </form>
         
-        <div class="error-msg-box-form-sig">
+        
             <p class="error-msg-form-sig">{{errorMessage}}</p>
-        </div>
+     
             
 
-          
+    </section>   
 
             <script src="/canvas.js"></script>
 
