--- a/views/partials/menu.handlebars
+++ b/views/partials/menu.handlebars
@@ -1,3 +1,8 @@
 <nav>
-    <a href="/logout">Log out</a>
+    {{#if logout}}<a href="/login">Log in</a>{{/if}}
+    {{#if login}}<a href="/logout">Log out</a>
+    <a href="/edit">Edit profile</a>
+    <a href="/thanks">Thanks Page</a>
+    <a href="/signers">Signers Page</a>
+    {{/if}}
 </nav>
