--- a/views/registration.handlebars
+++ b/views/registration.handlebars
@@ -1,4 +1,8 @@
-
+<header class="nav-bar">
+        <div class="inner-box-nav">
+        {{>menu logout=true}}
+        </div>
+</header>
 <section class="register-page">
 
         <img src="/images/saycheese.jpg" alt="neon say cheese" class="img-say-cheese">
