--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -1,4 +1,6 @@
-
+<header class="nav-bar">
+        {{>menu login=true}}
+    </header>
 <section class="signers-page">
 
     <img src="/images/saycheese.jpg" alt="neon say cheese" class="img-say-cheese">
