--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -1,3 +1,6 @@
+<header class="nav-bar">
+        {{>menu login=true}}
+    </header>
 <section class="city-page">
  
     <img src="/images/saycheese.jpg" alt="neon say cheese" class="img-say-cheese">
