--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,10 +9,10 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;500&display=swap" rel="stylesheet">
 </head>
 <body>
-   <header></header>
-    <main>
+   {{!-- <header></header> --}}
+    {{!-- <main> --}}
          {{{body}}}
-    </main>
+    {{!-- </main> --}}
     <footer>Lucie Bellenger © 2021</footer>
 </body>
 </html>
