--- a/views/partials/menu.handlebars
+++ b/views/partials/menu.handlebars
@@ -1,8 +1,10 @@
 <nav>
-    {{#if logout}}<a href="/login">Log in</a>{{/if}}
-    {{#if login}}<a href="/logout">Log out</a>
-    <a href="/edit">Edit profile</a>
-    <a href="/thanks">Thanks Page</a>
-    <a href="/signers">Signers Page</a>
+    {{#if logout}}<a href="/login" class="menu-links">Log in</a>{{/if}}
+    {{#if login}}
+    <a class="menu-links">Good to see you {{first}}</a>
+    <a href="/logout" class="menu-links">Log out</a>
+    <a href="/edit" class="menu-links">Edit profile</a>
+    <a href="/thanks" class="menu-links">Thanks Page</a>
+    <a href="/signers" class="menu-links">Signers Page</a>
     {{/if}}
 </nav>
