--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,3 +1,6 @@
+      <header class="nav-bar">
+        {{>menu login=true}}
+    </header>
             <div class="title-profile-box">
                 <h1>Set up your profile</h1>
                 <h3>Please tell us a bit about yourself</h3>
