--- a/views/thanks.handlebars
+++ b/views/thanks.handlebars
@@ -1,4 +1,6 @@
-
+<header class="nav-bar">
+        {{>menu login=true}}
+    </header>
 <section class="thanks-page">
 
     <img src="/images/saycheese.jpg" alt="neon say cheese" class="img-say-cheese">
