--- a/views/registration.handlebars
+++ b/views/registration.handlebars
@@ -1,6 +1,6 @@
 <header class="nav-bar">
         <div class="inner-box-nav">
-        {{>menu logout=true}}
+        {{>menu out=true}}
         </div>
 </header>
 <section class="register-page">
