--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
 
     <header class="nav-bar">
-        {{>menu login=true}}
+        {{>menu signup=true}}
     </header>
 
     <section class="login-page">
