--- a/views/partials/menu.handlebars
+++ b/views/partials/menu.handlebars
@@ -2,11 +2,14 @@
     {{#if out}}<a href="/login" class="menu-links">Log in</a>{{/if}}
     {{#if signup}}<a href="/register" class="menu-links">Sign up</a>{{/if}}
     {{#if in}}
-    <span class="menu-links">Good to see you <span class="cap">{{first}}</span></span>
+    {{#if name}}
+    <span class="hello-menu">Good to see you <span class="cap">{{first}}</span></span>
+    {{/if}}
     <a href="/edit" class="menu-links">Edit Profile</a>
-    <a href="/petition" class="menu-links">Petition Page</a>
-    <a href="/thanks" class="menu-links">Thanks Page</a>
-    <a href="/signers" class="menu-links">Signers Page</a>
+    <a href="/petition" class="menu-links">Petition</a>
+    <a href="/thanks" class="menu-links">Thanks</a>
+    <a href="/signers" class="menu-links">Signers</a>
     <a href="/logout" class="menu-links">Log out</a>
     {{/if}}
+  
 </nav>
