--- a/views/signers.handlebars
+++ b/views/signers.handlebars
@@ -1,5 +1,5 @@
 <header class="nav-bar">
-        {{>menu in=true}}
+        {{>menu in=true name=true}}
     </header>
 <section class="signers-page">
 
