--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -1,5 +1,5 @@
 <header class="nav-bar">
-        {{>menu in=true}}
+        {{>menu in=true name=false}}
     </header>
 <section class="city-page">
  
