--- a/views/partials/form.handlebars
+++ b/views/partials/form.handlebars
@@ -17,7 +17,7 @@
                 <input type="text"  name="city" placeholder="City">
                 <input type="url"  name="url" placeholder="https://example.com">   
                 <input type="hidden" name="_csrf" value="{{csrfToken}}">
-                <button type="submit" class="btn-profile">Submit</button>
+                <button type="submit" class="btn-profile">Continue</button>
                 {{/if}}
     
 
