--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,5 +1,5 @@
       <header class="nav-bar">
-        {{>menu in=true}}
+        {{>menu in=true  name=true}}
     </header>
     <section class="profile-page">
             
@@ -11,6 +11,6 @@
              {{>form profile=true}}
             </form>
 
-            <p>{{errorMessage}}</p>
+            <p class="error-msg-profile">{{errorMessage}}</p>
 
     </section>
