--- a/views/city.handlebars
+++ b/views/city.handlebars
@@ -10,7 +10,13 @@
 
 <div class="list-signers-box">
     {{#rows}}
-    <p class="list-signers"><a href="{{url}}" target="_blank" rel="noopener noreferrer" class="link-signers">{{first}} {{last}}</a></p>
+      {{#if url}}
+        
+             <p class="list-signers"><a href="{{url}}" target="_blank" rel="noopener noreferrer" class="link-signers" >{{first}} {{last}}</a></p>
+             {{else}}<p class="list-signers">{{first}} {{last}}</p>
+            
+            {{/if}}
+           
     {{/rows}}
 
 </div>
