--- a/views/partials/form.handlebars
+++ b/views/partials/form.handlebars
@@ -28,7 +28,7 @@
                 <input type='text' name='last' placeholder='Last Name' autocomplete='off' value="{{last}}">
                 <input type='email' name='email' placeholder='Email' autocomplete='off' value="{{email}}">
                 <input type='password' name='pass' placeholder='Password' autocomplete='off'>
-                <input type="number" name="age" placeholder="Age" value="{{age}}">
+                <input type="number" name="age" min="18" max="121" placeholder="Age" value="{{age}}">
                 <input type="text"  name="city" placeholder="City" value="{{city}}">
                 <input type="url"  name="url" placeholder="https://example.com" value="{{url}}">   
                 {{/rows}}
